--- a/desafios/d12/estilo/style.css
+++ b/desafios/d12/estilo/style.css
@@ -1,4 +1,14 @@
 @charset "UTF-8";
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root {
+    --fonte1: verdana, geneva, tahoma, sans-serif;
+    --fonte2: 'Sriracha', cursive;
+    --fonte3: 'Sriracha', cursive;
+
+}
 
 * {
     padding: 0px;
@@ -8,6 +18,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -19,6 +30,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant:small-caps;
+    font-family: var(--fonte2);
+    font-size: 3em;
 }
 
 header > p {
@@ -40,13 +53,14 @@ section {
     padding-bottom: 10px;
     padding-left: 30px;
     line-height: 2em;
+    font-family: var(--fonte3);
 
 }
 
 
 section.normal {
-    background-color: white;
-    color: black;
+        background-color: white;
+        color: black;
 }
 
 section.imagem {
