--- a/desafios/d12/estilo/style.css
+++ b/desafios/d12/estilo/style.css
@@ -31,7 +31,7 @@ header > h1 {
     padding-top: 50px;
     font-variant:small-caps;
     font-family: var(--fonte2);
-    font-size: 3em;
+    font-size: 10vw;
 }
 
 header > p {
@@ -54,24 +54,41 @@ section {
     padding-left: 30px;
     line-height: 2em;
     font-family: var(--fonte3);
+    font-size: 3.5vw;
+}
 
+section p{
+    padding-bottom: 2em;
 }
 
 
 section.normal {
-        background-color: white;
-        color: black;
+    background-color: white;
+    color: black;
 }
 
 section.imagem {
     background-color: black;
     color: white;
-    
+    box-shadow: inset 6px 6px 13px 0 rgba(0, 0, 0, 0.718);
+    background-size: cover;
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    background-color: rgb(51, 50, 50);
-    width: 400px;
+    background-color: rgba(51, 50, 50, 0.521);
+    display: inline-block;
+    padding: 10px;
+    text-shadow: 2px 2px 0px black;
+}
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
 }
 
 footer {
