exercicio media query 004

--- a/exercicios/ex026/mq002/estilos/paisagem.css
+++ b/exercicios/ex026/mq002/estilos/paisagem.css
@@ -3,5 +3,5 @@
 /* Aparelho em deitado (landscape) */
 
 body {
-    background: url(../imagens/cev-landscape.jpg) no-repeat left bottom;
+    background: url(../imagens/cev-landscape.jpg) left bottom;
 }
