--- a/exercicios/ex026/mq002/estilos/retrato.css
+++ b/exercicios/ex026/mq002/estilos/retrato.css
@@ -3,5 +3,5 @@
 /* Aparelho em pé (portrait) */
 
 body {
-    background: url(../imagens/cev-portrait.jpg) no-repeat center bottom;
+    background: url(../imagens/cev-portrait.jpg) center bottom;
 }
